WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309662
[LBSE] Fix incorrect clipping on feOffset
https://bugs.webkit.org/show_bug.cgi?id=309662
Summary
[LBSE] Fix incorrect clipping on feOffset
Rob Buis
Reported
2026-03-11 04:56:02 PDT
Fix incorrect clipping on feOffset.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-03-11 04:57:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60351
Radar WebKit Bug Importer
Comment 2
2026-03-18 04:56:11 PDT
<
rdar://problem/172823659
>
EWS
Comment 3
2026-03-25 13:39:33 PDT
Committed
309937@main
(1ff05015f958): <
https://commits.webkit.org/309937@main
> Reviewed commits have been landed. Closing PR #60351 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug