[LBSE] Fix incorrect clipping on feOffset https://bugs.webkit.org/show_bug.cgi?id=309662

Reviewed by Said Abou-Hallawa.

Create a new, adjusted FilterImage for SourceGraphic
primitives that use a primitive subregion hat differs
from the default filter region (like feOffset), this
avoids clipping to the too tight default filter region.

Code taken from a WIP patch by Nikolas Zimmermann.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* Source/WebCore/platform/graphics/filters/FilterImage.cpp:
(WebCore::FilterImage::create):
* Source/WebCore/platform/graphics/filters/FilterImage.h:
* Source/WebCore/svg/graphics/filters/SVGFilterRenderer.cpp:
(WebCore::SVGFilterRenderer::apply):

Canonical link: https://commits.webkit.org/309937@main